 - Nerfed Inspire's effect to +10% ATK and MAT (was originally +12%).
 - Nerfed Lightning II's MP cost to 30 MP (was originally 22 MP).
 - Nerfed Gust's damage by 16.6%.
 - Increased Critical Heal I's max effectiveness from +10% to +20%.
 - Replaced The Warden's Darkfire with Engulfing Darkness, which is mechanically the same skill, except it does not debuff MDF.

RNG Balancing:
 - Quadrupled the chance of encountering a rare enemy.
 - Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
 - Buffed the drop rate of all resistance accessories from 2% to 3.33%.

Miscellaneous Balancing:
 - You can no longer equip more than one of the same accessory on a single party member.
 - State resistance accessories no longer remove already applied states when equipped.
 - Greatly increased earned JP from all sources.
 - All party members now gain +1 INT per 5 levels, for a total of +20 INT at level 100 and +6 INT at Alpha 15's level cap of 30.
 - Skill mastery's effect is 1.5x what it was previously, meaning damage can be increased up to +30% and MP cost can be decreased down to -30%.
 - Henry can now be killed without entering his second phase; however, he now enters his second phase at 40% HP instead of 30%.
 - Reduced every level up EXP requirement by 20, making it much easier to level up in the early-game.
 - Greatly increased the acceleration of the EXP curve at later levels. This barely affects the game in its current state considering the low level cap, but this change will help prevent leveling up from being too easy in the late/end-game.
 - Nerfed the Rogue class's base HIT, EVA, and CRI by 1% each.
 - Nerfed Bat's ATK from 17 to 15.
 - Greatly increased Bit drops from all Blazing Sands enemies to account for high shop prices in Telluria Castle Town.
 - Replaced the Ration (Rat Jerky) in the Giant Rat's drop pool with a regular Ration, effectively removing the former from the game.