@@ -673,7 +673,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -784,7 +784,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -939,7 +939,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -1050,7 +1050,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -1155,7 +1155,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -1266,7 +1266,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -1383,7 +1383,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -1425,7 +1425,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -3500,7 +3500,7 @@
             "indent": 0,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -3592,7 +3592,7 @@
             "indent": 0,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -4137,7 +4137,7 @@
             "indent": 0,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -4658,7 +4658,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -4769,7 +4769,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -11282,7 +11282,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -11405,7 +11405,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -11883,7 +11883,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
@@ -12094,7 +12094,7 @@
             "indent": 1,
             "parameters": [
               12,
-              "$gameTemp.rareEnemy()"
+              "$gameSystem.rareEnemyRoll()"
             ]
           },
           {
