@@ -384,8 +384,10 @@ Skill Balancing:
  - Replaced The Warden's Darkfire with Engulfing Darkness, which is mechanically the same skill, except it does not debuff MDF.
 
 RNG Balancing:
- - Quadrupled the chance of encountering a rare enemy.
- - Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
+ - Made a lot of mechanics based around rare enemies a lot less grindy.
+  ~ Quadrupled the base chance of encountering a rare enemy.
+  ~ As rare enemy spawns fail, the spawn chance will increase exponentially, being reset once a rare enemy finally spawns.
+  ~ Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
  - Buffed the drop rate of all resistance accessories from 2% to 3.33%.
 
 Miscellaneous Balancing:
